--- a/mt-spring-core/pom.xml
+++ b/mt-spring-core/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>utils</artifactId>
             <version>${parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
