--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <module>mt-spring-jwt-starter</module>
         <module>mt-spring-rocketmq-starter</module>
         <module>mt-processor</module>
-        <module>test-processor</module>
+<!--        <module>test-processor</module>-->
         <module>mt-spring-core</module>
         <module>mt-spring-redis-starter</module>
     </modules>
