--- a/mt-tools/base-tools/pom.xml
+++ b/mt-tools/base-tools/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.github.668mt</groupId>
         <artifactId>mtools</artifactId>
-        <version>3.0</version>
+        <version>2.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -16,7 +16,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
-                <version>6.0.4</version>
+                <version>5.2.1.RELEASE</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>io.github.668mt</groupId>
             <artifactId>utils</artifactId>
-            <version>3.0</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
