--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.668mt</groupId>
     <artifactId>mt-spring-starter-parent</artifactId>
-    <version>3.0</version>
+    <version>2.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -20,36 +20,29 @@
         <!--        <module>test-processor</module>-->
         <module>mt-spring-core</module>
         <module>mt-spring-redis-starter</module>
+        <module>test-module</module>
     </modules>
 
-    <!--    <parent>-->
-    <!--        <groupId>org.springframework.boot</groupId>-->
-    <!--        <artifactId>spring-boot-starter-parent</artifactId>-->
-    <!--        <version>2.2.1.RELEASE</version>-->
-    <!--    </parent>-->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.2</version>
-        <relativePath/>
+        <version>2.2.1.RELEASE</version>
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <!--        <java.version>1.8</java.version>-->
-        <java.version>17</java.version>
-        <!--        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>-->
-        <nacos-spring-cloud.version>2022.0.0.0-RC2</nacos-spring-cloud.version>
-        <spring-cloud.version>2022.0.0</spring-cloud.version>
-        <spring-cloud-alibaba.version>2022.0.0.0-RC2</spring-cloud-alibaba.version>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+        <nacos-spring-cloud.version>2.2.1.RELEASE</nacos-spring-cloud.version>
+        <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
         <lombok.version>1.18.24</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.5.5.final</mapstruct.version>
-        <mt.version.web-starter>3.1.0</mt.version.web-starter>
-        <mt.version.jwt>3.1.0</mt.version.jwt>
-        <mt.version.generator>3.1.0</mt.version.generator>
-        <mt.version.base-tools>3.0</mt.version.base-tools>
+        <mt.version.web-starter>2.0</mt.version.web-starter>
+        <mt.version.jwt>2.0</mt.version.jwt>
+        <mt.version.generator>2.0</mt.version.generator>
+        <mt.version.base-tools>2.0</mt.version.base-tools>
     </properties>
     <url>https://github.com/668mt/mt-spring-web</url>
     <name>mt-spring-web</name>
@@ -181,17 +174,12 @@
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>3.0.0</version>
+                <version>2.3.2</version>
             </dependency>
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>2.0.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.github.xiaoymin</groupId>
-                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
-                <version>4.3.0</version>
             </dependency>
             <dependency>
                 <groupId>org.redisson</groupId>
@@ -295,7 +283,6 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <release>${java.version}</release>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
