--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.668mt</groupId>
     <artifactId>utils</artifactId>
-    <version>3.0</version>
+    <version>2.0</version>
     <properties>
         <slf4j.version>1.7.25</slf4j.version>
         <commons-net.version>3.9.0</commons-net.version>
@@ -25,7 +25,7 @@
         <jackson.version>2.9.0</jackson.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>17</java.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <url>https://github.com/668mt/mt-spring-web</url>
@@ -55,8 +55,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
-<!--                <version>5.2.1.RELEASE</version>-->
-                <version>6.0.4</version>
+                <version>5.2.1.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -84,8 +83,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-<!--            <version>2.2.1.RELEASE</version>-->
-            <version>3.0.2</version>
+            <version>2.2.1.RELEASE</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -241,11 +239,7 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-<!--                    <source>1.8</source>-->
-<!--                    <target>1.8</target>-->
                     <encoding>UTF-8</encoding>
-<!--                    <release>${java.version}</release>-->
-<!--                    <release>1.8</release>-->
                 </configuration>
             </plugin>
             <plugin>
