--- a/mt-spring-core/pom.xml
+++ b/mt-spring-core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.github.668mt</groupId>
         <artifactId>mt-spring-starter-parent</artifactId>
-        <version>2.0</version>
+        <version>2.0.1</version>
     </parent>
     <artifactId>mt-spring-core</artifactId>
 
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>io.github.668mt</groupId>
             <artifactId>utils</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${utils.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.pagehelper</groupId>
