--- a/mt-spring-web-starter/pom.xml
+++ b/mt-spring-web-starter/pom.xml
@@ -9,7 +9,8 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <version>${mt.version.web-starter}</version>
+<!--    <version>${mt.version.web-starter}</version>-->
+    <version>3.1.2</version>
     <artifactId>mt-spring-web-starter</artifactId>
 
     <dependencies>
